--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,7 @@ color: #e25347;
     margin-top: 32px;
     padding-top: 8px;
     margin: 0 auto;
+    margin-top: 45px;
 }
 .footer p{
     
@@ -226,17 +227,114 @@ color: #e25347;
     font-size: 28px;
     margin-left: 280px;
 }
+
+/* Mobail Menu */
+.hamburger-menu{
+    display: none;
+}
+
+#menu__toggle {
+    opacity: 0;
+  }
+  
+  .menu__btn {
+    display: flex; 
+    align-items: center;  
+    position: fixed;
+    top: 95px;
+    left: 20px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 4;
+  }
+  
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 2px;
+    background-color: #000000;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: '';
+    top: 8px;
+  }
+  
+.menu__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 130px 0;
+    list-style: none;
+    text-align: center;
+    background-color: #bd4434;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+    z-index: 3;
+  }
+  
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: rgb(255, 255, 255);
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.3s;
+  }
+  .menu__box a{
+      text-decoration: none;
+      color: rgb(255, 255, 255);
+      
+  }
+  .menu__item:hover {
+    background-color: #434343;
+    transition: 0.3s;
+  }
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    visibility: visible;
+    left: 0;
+  }
+
+  /* Mobail Menu */
+  
 /*adaptiv*/
-@media screen and (max-width: 1100px){
+@media screen and (min-width: 820px){
     body{
         margin: 0 auto;
         
+    }
+    .hamburger-menu{
+        display: block;
     }
     .container{
         font-size:30px;
     }
     .mycarusel{
-        display: none;
+        
     }
     .next_content p {
         font-size:28px;
@@ -248,21 +346,25 @@ color: #e25347;
         margin: 0 auto;
         width: 100%;
     }
+    .mycarusel {
+        width: 100%;
+    }
     .navs_bar{
         display: flex;
         flex-direction: column;
         margin: 0 auto;
     }
     .rows{
-        display: flex;
-        flex-direction: column;
+        display: none;
     }
     .call{
-        font-size:30px;
+        font-size:20px;
         float: center;
+        margin-top: 10px;
         background-color: #3d3d3d;
     border: none;
     width: 100%;
+    border-radius: 0%;
     }
     .navs_bar{
         width: 100%;
@@ -288,6 +390,7 @@ color: #e25347;
         margin: 0 auto;
         height : 100%;
         text-align: center;
+        margin-top: 45px;
     }
     .footer p{
       margin: 0 auto;
